<resources>
    <string name="app_name">SCHOOL CRM</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="transport">Transport</string>
    <string name="kids_location">Kid\'s Location</string>
    <string name="teachers">Teachers</string>
    <string name="downloads">Downloads</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="check_for_update">Check for Update</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="logout">Logout</string>
    <string name="assignment">Assignment</string>
    <string name="leader_board">Leader Board</string>
    <string name="class_routine">Class Routine</string>
    <string name="exam_marks">Exam Marks</string>
    <string name="extra_curriculum_activities">Extra Curriculum</string>
    <string name="library">Library</string>
    <string name="payment">Payment</string>
    <string name="study_material">Study Material</string>
    <string name="attendance">Attendance</string>
    <string name="gallery">Gallery</string>
    <string name="scholarship">Scholarship</string>
    <string name="subjects">Subjects</string>
    <string name="quick_access">Quick Access</string>
    <string name="performance">Performance</string>
    <string name="notice_board">Notice Board</string>
    <string name="average_performance_in_class">average performance in class</string>
    <string name="news">News</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="academic_calender">Academic Calender</string>
    <string name="notice_name">Notice name</string>
    <string name="noticed_by">Noticed By</string>
    <string name="dummy_date">27 FEB 2018</string>
    <string name="word_from_bench">Word from bench</string>
    <string name="word_from_bench_caption">Keep yourself updated with everyone</string>
    <string name="sun">SUN</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="science">Science</string>
    <string name="_10_00_10_45_am">10:00 – 10:45 am</string>
    <string name="kid_s_name">Kid\'s name</string>
    <string name="change">change</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dummy_password">********</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_address">Full address</string>
    <string name="dummy_email">something@something.com</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="teacher_name">Teacher name</string>
    <string name="month_year">Month year</string>
    <string name="download">download</string>
    <string name="uploaded_on">Uploaded on :</string>
    <string name="marks">Marks</string>
    <string name="submit_by">Submit by :</string>
    <string name="_100">80/100</string>
    <string name="grade_a">Grade : A</string>
    <string name="grade">Grade : </string>
    <string name="remarks">Remarks</string>
    <string name="album">Album</string>
    <string name="topic_name">Topic name</string>
    <string name="_class">Class :</string>
    <string name="subject">Subject :</string>
    <string name="global_library">Global Library</string>
    <string name="library_caption_content">Access thousands on e-Books, Video Tutorials and ask all your questions every day</string>
    <string name="dummy_count">89856</string>
    <string name="title_activity_lib">Lib</string>
    <string name="title_pdf">PDF</string>
    <string name="title_home">Home</string>
    <string name="title_video">Video</string>
    <string name="title_book_shelf">Book Shelf</string>
    <string name="title_notification">Notification</string>
    <string name="membership_prime">Membership Prime</string>
    <string name="expires_on">Expires on</string>
    <string name="expires_on_dummy">Expires on 27-FEB-2019</string>
    <string name="read">Read</string>
    <string name="saved_books">Saved\nBooks</string>
    <string name="watched">Watched</string>
    <string name="saved_videos">Saved\nVideos</string>
    <string name="dummy_count_lib">408</string>
    <string name="video_name">Video name</string>
    <string name="dummy_duration">23:21</string>
    <string name="uploader_name">Uploader name</string>
    <string name="comment_title">Comment title</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="yrs_of_exp">Yrs of Exp.</string>
    <string name="chat">Chat</string>
    <string name="qualification">Qualification</string>
    <string name="rating">Rating</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="subject_name">Subject name</string>
    <string name="_2018_2019">2018–2019</string>
    <string name="download_syllabus">download\nsyllabus</string>
    <string name="section">Section :</string>
    <string name="download_receipt">Download\nreceipt</string>
    <string name="payment_name">Payment name</string>
    <string name="paid">Paid</string>
    <string name="payment_details">Payment details</string>
    <string name="amount">Amount :</string>
    <string name="winner_name">Winner name</string>
    <string name="title">Title</string>
    <string name="cricket_tournament">Cricket Tournament</string>
    <string name="eligibility">Eligibility :</string>
    <string name="tournament_title">Tournament title</string>
    <string name="tournament_details">Tournament details</string>
    <string name="apply_now">Apply\nNow</string>
    <string name="details">Details</string>
    <string name="please_wait">Please wait…</string>
    <string name="powered_by">powered by</string>
    <string name="dev_company_name">semicolon india</string>
    <string name="facing_any_problem_n_we_are_here_to_help">facing any problem? we are here to help :)</string>
    <string name="dev_number">+91 77956 03688</string>
    <string name="contact_email">contact@semicolonindia.in</string>
    <string name="dev_address">#40, near rose garden\nkelkere, banarghatta road,\nbangalore 560083</string>
    <string name="click_here_for_direction">Click here for direction</string>
    <string name="email_id">Email id</string>
    <string name="hello">hello</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="need_help">Need help?</string>
    <string name="forgot_password_msg">Password and instructions will be sent to your registered email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">change password</string>
    <string name="_change_password">Change password</string>
    <string name="feedback_title">Having any suggestions or any kind of issues facing in school?\nEscalate here in just on click!</string>
    <string name="action">Action</string>
    <string name="escalation">Escalation</string>
    <string name="message">Message</string>
</resources>
