<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvNoticeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/notice_name"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/tvNoticeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dummy_date"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/tvNoticedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/noticed_by"
        android:textColor="@color/colorTextPrimary" />
</LinearLayout>