<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/subjects"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/grade_a"
                android:textColor="@color/colorTextPrimary"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <in.semicolonindia.schoolcrm.widgets.npb.NumberProgressBar
                android:id="@+id/npbMarks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:progress_reached_color="@color/colorIndicatorSuccess"
                app:progress_unreached_color="@color/colorSecondary"
                custom:progress_current="80" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/_100"
                android:textColor="@color/colorTextPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_margin="8dp"
            android:background="@color/colorAppBG" />

        <TextView
            android:id="@+id/tvRemarkTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/tvRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_text"
            android:textColor="@color/colorTextPrimary" />
    </LinearLayout>
</android.support.v7.widget.CardView>