<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSubjectIcon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="0.3"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_biology_lab" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSubjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/subject_name"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/teacher_name"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_access_time_24px"
                    android:gravity="center_vertical"
                    android:text="@string/_2018_2019"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="13sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnDownload"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_download"
                android:text="@string/download_syllabus"
                android:textColor="@color/colorTextPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAppBG" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/_class"
                android:textColor="@color/colorTextPrimary"
                android:textSize="12sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorAppBG" />

            <TextView
                android:id="@+id/tvSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/section"
                android:textColor="@color/colorTextPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>