<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llLowerContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <in.semicolonindia.schoolcrm.widgets.civ.CircleImageView
            android:id="@+id/civUser"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVideoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/video_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/topic_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="13sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgOptions"
            app:srcCompat="@drawable/ic_more_vert_28px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tvViews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_visibility_24px"
            android:gravity="center"
            android:text="@string/dummy_count"
            android:textColor="@color/colorTextPrimary"
            android:textSize="13sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/colorAppBG" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_access_alarm_24px"
            android:gravity="center"
            android:text="@string/dummy_duration"
            android:textColor="@color/colorTextPrimary"
            android:textSize="13sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/colorAppBG" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_chat_24px"
            android:gravity="center"
            android:text="@string/dummy_count_lib"
            android:textColor="@color/colorTextPrimary"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>